# stoik-test

./: .gitignore  README.md  docker-compose.test.yaml  docker-compose.yaml  pylintrc
api/: .env  .env.test  .pre-commit-config.yaml  Dockerfile  pyproject.toml  pytest.ini
api/flaskr/: __init__.py  db.py  schema.sql
api/tests/: conftest.py
api/tests/utils/: test_urls_utils.py
api/tests/views/: test_urls_get_views.py  test_urls_post_views.py
api/urls/: __init__.py  models.py  utils.py  views.py
